--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
-    <!--assign variable to layout as object-->
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+    <!-- assign variable to layout as object -->
     <data>
         <variable name="contact"
                   type="net.codeinreal.amirahmadadibi.applications.archsample.model.Contact"/>
@@ -9,11 +8,13 @@
                   type="net.codeinreal.amirahmadadibi.applications.archsample.EventHandler"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MainActivity">
         <Button
-                android:text="Button"
+                android:text="change this !"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btn_action"
@@ -25,37 +26,44 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent"
-        android:onClick="@{() -> clickHandler.onButtonClick()}"/>
+                android:onClick="@{() -> clickHandler.onButtonClick()}"/>
         <TextView
-                android:text="@{contact.name,default=name}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_text"
+                android:id="@+id/tv_username"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/btn_action"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp"
+                android:text="@{contact._username}"/>
         <TextView
-                android:text="@{contact.email,default=email}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_email"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/tv_text"
+                app:layout_constraintTop_toBottomOf="@+id/tv_username"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"/>
-        <TextView
-                android:text="TextView"
+                android:layout_marginEnd="8dp"
+                android:text="@{contact._email}"/>
+
+        <!--@={contact._username} equal to is because it wiil acsept the data-->
+        <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_text_2" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/btn_action" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"/>
+                android:inputType="text"
+                android:text="@={contact._username}"
+                android:ems="10"
+                android:id="@+id/et_name"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/btn_action"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginStart="8dp"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
