--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,5 +80,19 @@
                 app:layout_constraintTop_toBottomOf="@+id/tv_email"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"/>
+
+        <TextView
+                android:id="@+id/tv_randome_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="this is for randome numer"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
