compelete simple version of using viewmodel and livedata

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,13 @@
         <variable name="contact"
                   type="net.codeinreal.amirahmadadibi.applications.archsample.model.Contact"/>
         <variable name="clickHandler"
-                  type="net.codeinreal.amirahmadadibi.applications.archsample.EventHandler"/>
+                  type="net.codeinreal.amirahmadadibi.applications.archsample.helper.EventHandler"/>
         <variable name="imageUrl" type="String"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".MainActivity">
+            tools:context=".view.MainActivity">
         <Button
                 android:text="change this !"
                 android:layout_width="wrap_content"
@@ -94,5 +94,14 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent"/>
+        <Button
+                android:id="@+id/btn_generate_new_randome_number"
+                android:text="Generate New Randome Number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/tv_randome_number" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
